parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    COMMENT
    ELSE
    EQUALS
    FALSE
    GREATER
    IF
    LBRACE
    LESS
    MAIN
    NOTEQUAL
    PRINT
    RBRACE
    RETURN
    THEN
    TRUE
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON var_declaration
Rule 2     var_declaration -> VARIABLE simple_type variables SEMICOLON
Rule 3     variables -> variables COMMA variable
Rule 4     variables -> variable
Rule 5     variable -> ID
Rule 6     variable -> ID LBRACK expression RBRACK
Rule 7     variable -> ID LBRACK expression RBRACK LBRACK expression RBRACK
Rule 8     simple_type -> INT
Rule 9     simple_type -> FLOAT
Rule 10    simple_type -> CHAR
Rule 11    simple_type -> STRING
Rule 12    simple_type -> BOOLEAN
Rule 13    expression -> term
Rule 14    expression -> term PLUS term
Rule 15    expression -> term MINUS term
Rule 16    term -> factor
Rule 17    term -> factor TIMES factor
Rule 18    term -> factor DIVIDE factor
Rule 19    factor -> variable
Rule 20    factor -> cte
Rule 21    factor -> LPAREN expression RPAREN
Rule 22    cte -> CTEI
Rule 23    cte -> CTEF
Rule 24    cte -> CTEC
Rule 25    cte -> CTES
Rule 26    cte -> CTEB

Terminals, with rules where they appear

BOOLEAN              : 12
CHAR                 : 10
COLON                : 
COMMA                : 3
COMMENT              : 
CTEB                 : 26
CTEC                 : 24
CTEF                 : 23
CTEI                 : 22
CTES                 : 25
DIVIDE               : 18
ELSE                 : 
EQUALS               : 
FALSE                : 
FLOAT                : 9
GREATER              : 
ID                   : 1 5 6 7
IF                   : 
INT                  : 8
LBRACE               : 
LBRACK               : 6 7 7
LESS                 : 
LPAREN               : 21
MAIN                 : 
MINUS                : 15
NOTEQUAL             : 
PLUS                 : 14
PRINT                : 
PROGRAM              : 1
RBRACE               : 
RBRACK               : 6 7 7
RETURN               : 
RPAREN               : 21
SEMICOLON            : 1 2
STRING               : 11
THEN                 : 
TIMES                : 17
TRUE                 : 
VARIABLE             : 2
WHILE                : 
error                : 

Nonterminals, with rules where they appear

cte                  : 20
expression           : 6 7 7 21
factor               : 16 17 17 18 18
program              : 0
simple_type          : 2
term                 : 13 14 14 15 15
var_declaration      : 1
variable             : 3 4 19
variables            : 2 3

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON var_declaration

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON var_declaration

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON var_declaration

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . var_declaration
    (2) var_declaration -> . VARIABLE simple_type variables SEMICOLON

    VARIABLE        shift and go to state 6

    var_declaration                shift and go to state 5

state 5

    (1) program -> PROGRAM ID SEMICOLON var_declaration .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON var_declaration .)


state 6

    (2) var_declaration -> VARIABLE . simple_type variables SEMICOLON
    (8) simple_type -> . INT
    (9) simple_type -> . FLOAT
    (10) simple_type -> . CHAR
    (11) simple_type -> . STRING
    (12) simple_type -> . BOOLEAN

    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    CHAR            shift and go to state 10
    STRING          shift and go to state 11
    BOOLEAN         shift and go to state 12

    simple_type                    shift and go to state 7

state 7

    (2) var_declaration -> VARIABLE simple_type . variables SEMICOLON
    (3) variables -> . variables COMMA variable
    (4) variables -> . variable
    (5) variable -> . ID
    (6) variable -> . ID LBRACK expression RBRACK
    (7) variable -> . ID LBRACK expression RBRACK LBRACK expression RBRACK

    ID              shift and go to state 15

    variables                      shift and go to state 13
    variable                       shift and go to state 14

state 8

    (8) simple_type -> INT .

    ID              reduce using rule 8 (simple_type -> INT .)


state 9

    (9) simple_type -> FLOAT .

    ID              reduce using rule 9 (simple_type -> FLOAT .)


state 10

    (10) simple_type -> CHAR .

    ID              reduce using rule 10 (simple_type -> CHAR .)


state 11

    (11) simple_type -> STRING .

    ID              reduce using rule 11 (simple_type -> STRING .)


state 12

    (12) simple_type -> BOOLEAN .

    ID              reduce using rule 12 (simple_type -> BOOLEAN .)


state 13

    (2) var_declaration -> VARIABLE simple_type variables . SEMICOLON
    (3) variables -> variables . COMMA variable

    SEMICOLON       shift and go to state 16
    COMMA           shift and go to state 17


state 14

    (4) variables -> variable .

    SEMICOLON       reduce using rule 4 (variables -> variable .)
    COMMA           reduce using rule 4 (variables -> variable .)


state 15

    (5) variable -> ID .
    (6) variable -> ID . LBRACK expression RBRACK
    (7) variable -> ID . LBRACK expression RBRACK LBRACK expression RBRACK

    SEMICOLON       reduce using rule 5 (variable -> ID .)
    COMMA           reduce using rule 5 (variable -> ID .)
    TIMES           reduce using rule 5 (variable -> ID .)
    DIVIDE          reduce using rule 5 (variable -> ID .)
    PLUS            reduce using rule 5 (variable -> ID .)
    MINUS           reduce using rule 5 (variable -> ID .)
    RBRACK          reduce using rule 5 (variable -> ID .)
    RPAREN          reduce using rule 5 (variable -> ID .)
    LBRACK          shift and go to state 18


state 16

    (2) var_declaration -> VARIABLE simple_type variables SEMICOLON .

    $end            reduce using rule 2 (var_declaration -> VARIABLE simple_type variables SEMICOLON .)


state 17

    (3) variables -> variables COMMA . variable
    (5) variable -> . ID
    (6) variable -> . ID LBRACK expression RBRACK
    (7) variable -> . ID LBRACK expression RBRACK LBRACK expression RBRACK

    ID              shift and go to state 15

    variable                       shift and go to state 19

state 18

    (6) variable -> ID LBRACK . expression RBRACK
    (7) variable -> ID LBRACK . expression RBRACK LBRACK expression RBRACK
    (13) expression -> . term
    (14) expression -> . term PLUS term
    (15) expression -> . term MINUS term
    (16) term -> . factor
    (17) term -> . factor TIMES factor
    (18) term -> . factor DIVIDE factor
    (19) factor -> . variable
    (20) factor -> . cte
    (21) factor -> . LPAREN expression RPAREN
    (5) variable -> . ID
    (6) variable -> . ID LBRACK expression RBRACK
    (7) variable -> . ID LBRACK expression RBRACK LBRACK expression RBRACK
    (22) cte -> . CTEI
    (23) cte -> . CTEF
    (24) cte -> . CTEC
    (25) cte -> . CTES
    (26) cte -> . CTEB

    LPAREN          shift and go to state 25
    ID              shift and go to state 15
    CTEI            shift and go to state 26
    CTEF            shift and go to state 27
    CTEC            shift and go to state 28
    CTES            shift and go to state 29
    CTEB            shift and go to state 30

    expression                     shift and go to state 20
    term                           shift and go to state 21
    factor                         shift and go to state 22
    variable                       shift and go to state 23
    cte                            shift and go to state 24

state 19

    (3) variables -> variables COMMA variable .

    SEMICOLON       reduce using rule 3 (variables -> variables COMMA variable .)
    COMMA           reduce using rule 3 (variables -> variables COMMA variable .)


state 20

    (6) variable -> ID LBRACK expression . RBRACK
    (7) variable -> ID LBRACK expression . RBRACK LBRACK expression RBRACK

    RBRACK          shift and go to state 31


state 21

    (13) expression -> term .
    (14) expression -> term . PLUS term
    (15) expression -> term . MINUS term

    RBRACK          reduce using rule 13 (expression -> term .)
    RPAREN          reduce using rule 13 (expression -> term .)
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33


state 22

    (16) term -> factor .
    (17) term -> factor . TIMES factor
    (18) term -> factor . DIVIDE factor

    PLUS            reduce using rule 16 (term -> factor .)
    MINUS           reduce using rule 16 (term -> factor .)
    RBRACK          reduce using rule 16 (term -> factor .)
    RPAREN          reduce using rule 16 (term -> factor .)
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35


state 23

    (19) factor -> variable .

    TIMES           reduce using rule 19 (factor -> variable .)
    DIVIDE          reduce using rule 19 (factor -> variable .)
    PLUS            reduce using rule 19 (factor -> variable .)
    MINUS           reduce using rule 19 (factor -> variable .)
    RBRACK          reduce using rule 19 (factor -> variable .)
    RPAREN          reduce using rule 19 (factor -> variable .)


state 24

    (20) factor -> cte .

    TIMES           reduce using rule 20 (factor -> cte .)
    DIVIDE          reduce using rule 20 (factor -> cte .)
    PLUS            reduce using rule 20 (factor -> cte .)
    MINUS           reduce using rule 20 (factor -> cte .)
    RBRACK          reduce using rule 20 (factor -> cte .)
    RPAREN          reduce using rule 20 (factor -> cte .)


state 25

    (21) factor -> LPAREN . expression RPAREN
    (13) expression -> . term
    (14) expression -> . term PLUS term
    (15) expression -> . term MINUS term
    (16) term -> . factor
    (17) term -> . factor TIMES factor
    (18) term -> . factor DIVIDE factor
    (19) factor -> . variable
    (20) factor -> . cte
    (21) factor -> . LPAREN expression RPAREN
    (5) variable -> . ID
    (6) variable -> . ID LBRACK expression RBRACK
    (7) variable -> . ID LBRACK expression RBRACK LBRACK expression RBRACK
    (22) cte -> . CTEI
    (23) cte -> . CTEF
    (24) cte -> . CTEC
    (25) cte -> . CTES
    (26) cte -> . CTEB

    LPAREN          shift and go to state 25
    ID              shift and go to state 15
    CTEI            shift and go to state 26
    CTEF            shift and go to state 27
    CTEC            shift and go to state 28
    CTES            shift and go to state 29
    CTEB            shift and go to state 30

    expression                     shift and go to state 36
    term                           shift and go to state 21
    factor                         shift and go to state 22
    variable                       shift and go to state 23
    cte                            shift and go to state 24

state 26

    (22) cte -> CTEI .

    TIMES           reduce using rule 22 (cte -> CTEI .)
    DIVIDE          reduce using rule 22 (cte -> CTEI .)
    PLUS            reduce using rule 22 (cte -> CTEI .)
    MINUS           reduce using rule 22 (cte -> CTEI .)
    RBRACK          reduce using rule 22 (cte -> CTEI .)
    RPAREN          reduce using rule 22 (cte -> CTEI .)


state 27

    (23) cte -> CTEF .

    TIMES           reduce using rule 23 (cte -> CTEF .)
    DIVIDE          reduce using rule 23 (cte -> CTEF .)
    PLUS            reduce using rule 23 (cte -> CTEF .)
    MINUS           reduce using rule 23 (cte -> CTEF .)
    RBRACK          reduce using rule 23 (cte -> CTEF .)
    RPAREN          reduce using rule 23 (cte -> CTEF .)


state 28

    (24) cte -> CTEC .

    TIMES           reduce using rule 24 (cte -> CTEC .)
    DIVIDE          reduce using rule 24 (cte -> CTEC .)
    PLUS            reduce using rule 24 (cte -> CTEC .)
    MINUS           reduce using rule 24 (cte -> CTEC .)
    RBRACK          reduce using rule 24 (cte -> CTEC .)
    RPAREN          reduce using rule 24 (cte -> CTEC .)


state 29

    (25) cte -> CTES .

    TIMES           reduce using rule 25 (cte -> CTES .)
    DIVIDE          reduce using rule 25 (cte -> CTES .)
    PLUS            reduce using rule 25 (cte -> CTES .)
    MINUS           reduce using rule 25 (cte -> CTES .)
    RBRACK          reduce using rule 25 (cte -> CTES .)
    RPAREN          reduce using rule 25 (cte -> CTES .)


state 30

    (26) cte -> CTEB .

    TIMES           reduce using rule 26 (cte -> CTEB .)
    DIVIDE          reduce using rule 26 (cte -> CTEB .)
    PLUS            reduce using rule 26 (cte -> CTEB .)
    MINUS           reduce using rule 26 (cte -> CTEB .)
    RBRACK          reduce using rule 26 (cte -> CTEB .)
    RPAREN          reduce using rule 26 (cte -> CTEB .)


state 31

    (6) variable -> ID LBRACK expression RBRACK .
    (7) variable -> ID LBRACK expression RBRACK . LBRACK expression RBRACK

    SEMICOLON       reduce using rule 6 (variable -> ID LBRACK expression RBRACK .)
    COMMA           reduce using rule 6 (variable -> ID LBRACK expression RBRACK .)
    TIMES           reduce using rule 6 (variable -> ID LBRACK expression RBRACK .)
    DIVIDE          reduce using rule 6 (variable -> ID LBRACK expression RBRACK .)
    PLUS            reduce using rule 6 (variable -> ID LBRACK expression RBRACK .)
    MINUS           reduce using rule 6 (variable -> ID LBRACK expression RBRACK .)
    RBRACK          reduce using rule 6 (variable -> ID LBRACK expression RBRACK .)
    RPAREN          reduce using rule 6 (variable -> ID LBRACK expression RBRACK .)
    LBRACK          shift and go to state 37


state 32

    (14) expression -> term PLUS . term
    (16) term -> . factor
    (17) term -> . factor TIMES factor
    (18) term -> . factor DIVIDE factor
    (19) factor -> . variable
    (20) factor -> . cte
    (21) factor -> . LPAREN expression RPAREN
    (5) variable -> . ID
    (6) variable -> . ID LBRACK expression RBRACK
    (7) variable -> . ID LBRACK expression RBRACK LBRACK expression RBRACK
    (22) cte -> . CTEI
    (23) cte -> . CTEF
    (24) cte -> . CTEC
    (25) cte -> . CTES
    (26) cte -> . CTEB

    LPAREN          shift and go to state 25
    ID              shift and go to state 15
    CTEI            shift and go to state 26
    CTEF            shift and go to state 27
    CTEC            shift and go to state 28
    CTES            shift and go to state 29
    CTEB            shift and go to state 30

    term                           shift and go to state 38
    factor                         shift and go to state 22
    variable                       shift and go to state 23
    cte                            shift and go to state 24

state 33

    (15) expression -> term MINUS . term
    (16) term -> . factor
    (17) term -> . factor TIMES factor
    (18) term -> . factor DIVIDE factor
    (19) factor -> . variable
    (20) factor -> . cte
    (21) factor -> . LPAREN expression RPAREN
    (5) variable -> . ID
    (6) variable -> . ID LBRACK expression RBRACK
    (7) variable -> . ID LBRACK expression RBRACK LBRACK expression RBRACK
    (22) cte -> . CTEI
    (23) cte -> . CTEF
    (24) cte -> . CTEC
    (25) cte -> . CTES
    (26) cte -> . CTEB

    LPAREN          shift and go to state 25
    ID              shift and go to state 15
    CTEI            shift and go to state 26
    CTEF            shift and go to state 27
    CTEC            shift and go to state 28
    CTES            shift and go to state 29
    CTEB            shift and go to state 30

    term                           shift and go to state 39
    factor                         shift and go to state 22
    variable                       shift and go to state 23
    cte                            shift and go to state 24

state 34

    (17) term -> factor TIMES . factor
    (19) factor -> . variable
    (20) factor -> . cte
    (21) factor -> . LPAREN expression RPAREN
    (5) variable -> . ID
    (6) variable -> . ID LBRACK expression RBRACK
    (7) variable -> . ID LBRACK expression RBRACK LBRACK expression RBRACK
    (22) cte -> . CTEI
    (23) cte -> . CTEF
    (24) cte -> . CTEC
    (25) cte -> . CTES
    (26) cte -> . CTEB

    LPAREN          shift and go to state 25
    ID              shift and go to state 15
    CTEI            shift and go to state 26
    CTEF            shift and go to state 27
    CTEC            shift and go to state 28
    CTES            shift and go to state 29
    CTEB            shift and go to state 30

    factor                         shift and go to state 40
    variable                       shift and go to state 23
    cte                            shift and go to state 24

state 35

    (18) term -> factor DIVIDE . factor
    (19) factor -> . variable
    (20) factor -> . cte
    (21) factor -> . LPAREN expression RPAREN
    (5) variable -> . ID
    (6) variable -> . ID LBRACK expression RBRACK
    (7) variable -> . ID LBRACK expression RBRACK LBRACK expression RBRACK
    (22) cte -> . CTEI
    (23) cte -> . CTEF
    (24) cte -> . CTEC
    (25) cte -> . CTES
    (26) cte -> . CTEB

    LPAREN          shift and go to state 25
    ID              shift and go to state 15
    CTEI            shift and go to state 26
    CTEF            shift and go to state 27
    CTEC            shift and go to state 28
    CTES            shift and go to state 29
    CTEB            shift and go to state 30

    factor                         shift and go to state 41
    variable                       shift and go to state 23
    cte                            shift and go to state 24

state 36

    (21) factor -> LPAREN expression . RPAREN

    RPAREN          shift and go to state 42


state 37

    (7) variable -> ID LBRACK expression RBRACK LBRACK . expression RBRACK
    (13) expression -> . term
    (14) expression -> . term PLUS term
    (15) expression -> . term MINUS term
    (16) term -> . factor
    (17) term -> . factor TIMES factor
    (18) term -> . factor DIVIDE factor
    (19) factor -> . variable
    (20) factor -> . cte
    (21) factor -> . LPAREN expression RPAREN
    (5) variable -> . ID
    (6) variable -> . ID LBRACK expression RBRACK
    (7) variable -> . ID LBRACK expression RBRACK LBRACK expression RBRACK
    (22) cte -> . CTEI
    (23) cte -> . CTEF
    (24) cte -> . CTEC
    (25) cte -> . CTES
    (26) cte -> . CTEB

    LPAREN          shift and go to state 25
    ID              shift and go to state 15
    CTEI            shift and go to state 26
    CTEF            shift and go to state 27
    CTEC            shift and go to state 28
    CTES            shift and go to state 29
    CTEB            shift and go to state 30

    expression                     shift and go to state 43
    term                           shift and go to state 21
    factor                         shift and go to state 22
    variable                       shift and go to state 23
    cte                            shift and go to state 24

state 38

    (14) expression -> term PLUS term .

    RBRACK          reduce using rule 14 (expression -> term PLUS term .)
    RPAREN          reduce using rule 14 (expression -> term PLUS term .)


state 39

    (15) expression -> term MINUS term .

    RBRACK          reduce using rule 15 (expression -> term MINUS term .)
    RPAREN          reduce using rule 15 (expression -> term MINUS term .)


state 40

    (17) term -> factor TIMES factor .

    PLUS            reduce using rule 17 (term -> factor TIMES factor .)
    MINUS           reduce using rule 17 (term -> factor TIMES factor .)
    RBRACK          reduce using rule 17 (term -> factor TIMES factor .)
    RPAREN          reduce using rule 17 (term -> factor TIMES factor .)


state 41

    (18) term -> factor DIVIDE factor .

    PLUS            reduce using rule 18 (term -> factor DIVIDE factor .)
    MINUS           reduce using rule 18 (term -> factor DIVIDE factor .)
    RBRACK          reduce using rule 18 (term -> factor DIVIDE factor .)
    RPAREN          reduce using rule 18 (term -> factor DIVIDE factor .)


state 42

    (21) factor -> LPAREN expression RPAREN .

    TIMES           reduce using rule 21 (factor -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 21 (factor -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 21 (factor -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 21 (factor -> LPAREN expression RPAREN .)
    RBRACK          reduce using rule 21 (factor -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 21 (factor -> LPAREN expression RPAREN .)


state 43

    (7) variable -> ID LBRACK expression RBRACK LBRACK expression . RBRACK

    RBRACK          shift and go to state 44


state 44

    (7) variable -> ID LBRACK expression RBRACK LBRACK expression RBRACK .

    SEMICOLON       reduce using rule 7 (variable -> ID LBRACK expression RBRACK LBRACK expression RBRACK .)
    COMMA           reduce using rule 7 (variable -> ID LBRACK expression RBRACK LBRACK expression RBRACK .)
    TIMES           reduce using rule 7 (variable -> ID LBRACK expression RBRACK LBRACK expression RBRACK .)
    DIVIDE          reduce using rule 7 (variable -> ID LBRACK expression RBRACK LBRACK expression RBRACK .)
    PLUS            reduce using rule 7 (variable -> ID LBRACK expression RBRACK LBRACK expression RBRACK .)
    MINUS           reduce using rule 7 (variable -> ID LBRACK expression RBRACK LBRACK expression RBRACK .)
    RBRACK          reduce using rule 7 (variable -> ID LBRACK expression RBRACK LBRACK expression RBRACK .)
    RPAREN          reduce using rule 7 (variable -> ID LBRACK expression RBRACK LBRACK expression RBRACK .)

